--- a/src/style.css
+++ b/src/style.css
@@ -37,8 +37,20 @@ ul {
     display: flex;
     justify-content: space-around;
     margin-bottom: 70px;
+    align-items: center;
 }
 
 .algebra-item:last-child {
+    margin-bottom: 0;
+}
+
+.geometry-item {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 70px;
+    align-items: center;
+}
+
+.geometry-item:last-child {
     margin-bottom: 0;
 }
